[workspace]
resolver = "2"
members = [
    "switcher-server",
    "director-client",
]

[workspace.dependencies]
gstreamer       = { version = "0.22", features = ["v1_22"] }
gstreamer-base  = "0.22"
gstreamer-video = "0.22"
gstreamer-app   = "0.22"

tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"
log        = "0.4"
env_logger = "0.11"
libc       = "0.2"
ctrlc      = "3"

quinn  = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen  = "0.13"

flux-framing     = { path = "../tools/gstreamer/flux-framing" }
gst-fluxframer   = { path = "../tools/gstreamer/gst-fluxframer" }
gst-fluxdeframer = { path = "../tools/gstreamer/gst-fluxdeframer" }
gst-fluxsink     = { path = "../tools/gstreamer/gst-fluxsink" }
gst-fluxsrc      = { path = "../tools/gstreamer/gst-fluxsrc" }
gst-fluxdemux    = { path = "../tools/gstreamer/gst-fluxdemux" }
gst-fluxcdbc     = { path = "../tools/gstreamer/gst-fluxcdbc" }
