[package]
name    = "gst-fluxsrc"
version = "0.1.0"
edition = "2021"

[lib]
name       = "gstfluxsrc"
crate-type = ["cdylib", "rlib"]

[dependencies]
gstreamer      = { workspace = true }
gstreamer-base = { workspace = true }
flux-framing   = { path = "../flux-framing" }
serde_json     = { workspace = true }
log            = { workspace = true }
