[package]
name    = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flux-client"
path = "src/main.rs"

[dependencies]
gstreamer       = { workspace = true }
gstreamer-base  = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-app   = { workspace = true }
flux-framing    = { path = "../../tools/gstreamer/flux-framing" }
libc            = { workspace = true }
env_logger      = { workspace = true }
log             = { workspace = true }

# Plugin libs statically linked
gst-fluxsrc      = { path = "../../tools/gstreamer/gst-fluxsrc" }
gst-fluxdemux    = { path = "../../tools/gstreamer/gst-fluxdemux" }
gst-fluxdeframer = { path = "../../tools/gstreamer/gst-fluxdeframer" }
gst-fluxcdbc     = { path = "../../tools/gstreamer/gst-fluxcdbc" }
