[package]
name    = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flux-server"
path = "src/main.rs"

[dependencies]
gstreamer       = { workspace = true }
gstreamer-base  = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-app   = { workspace = true }
flux-framing    = { path = "../../tools/gstreamer/flux-framing" }
env_logger      = { workspace = true }
log             = { workspace = true }
ctrlc           = { workspace = true }

# Pull in our plugin libs so they are linked
gst-fluxframer = { path = "../../tools/gstreamer/gst-fluxframer" }
gst-fluxsink   = { path = "../../tools/gstreamer/gst-fluxsink" }
