[package]
name    = "test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flux-test-client"
path = "src/main.rs"

[dependencies]
gstreamer       = { workspace = true }
gstreamer-base  = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-app   = { workspace = true }
flux-framing    = { path = "../../tools/gstreamer/flux-framing" }
env_logger      = { workspace = true }
log             = { workspace = true }
ctrlc           = { workspace = true }
serde_json      = { workspace = true }

# Pull in our plugin libs so they are linked + registered
gst-fluxsrc      = { path = "../../tools/gstreamer/gst-fluxsrc" }
gst-fluxdemux    = { path = "../../tools/gstreamer/gst-fluxdemux" }
gst-fluxdeframer = { path = "../../tools/gstreamer/gst-fluxdeframer" }
gst-fluxcdbc     = { path = "../../tools/gstreamer/gst-fluxcdbc" }
