[package]
name    = "gst-fluxsink"
version = "0.1.0"
edition = "2021"

[lib]
name       = "gstfluxsink"
crate-type = ["cdylib", "rlib"]

[dependencies]
gstreamer       = { workspace = true }
gstreamer-base  = { workspace = true }
gstreamer-video = { workspace = true }
flux-framing   = { path = "../flux-framing" }
serde_json     = { workspace = true }
tokio          = { workspace = true }
bytes          = { workspace = true }
log            = { workspace = true }
quinn          = { workspace = true }
rustls         = { workspace = true }
rcgen          = { workspace = true }
